run/orchestrator.log
Traceback (most recent call last):
  File "D:\Antigravity\Panopticon\run_hft_orchestrator.py", line 53, in <module>
    from panopticon_py.db import ShadowDB
  File "D:\Antigravity\Panopticon\panopticon_py\db.py", line 3944
    finally:
    ^^^^^^^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "D:\Antigravity\Panopticon\run_hft_orchestrator.py", line 53, in <module>
    from panopticon_py.db import ShadowDB
  File "D:\Antigravity\Panopticon\panopticon_py\db.py", line 3944
    finally:
    ^^^^^^^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "D:\Antigravity\Panopticon\run_hft_orchestrator.py", line 53, in <module>
    from panopticon_py.db import ShadowDB
  File "D:\Antigravity\Panopticon\panopticon_py\db.py", line 3944
    finally:
    ^^^^^^^
SyntaxError: invalid syntax
